# media_pipe_ros1

./: README.md
src/media_pipe_ros1/: CMakeLists.txt  package.xml
src/media_pipe_ros1/launch/: hand_detector.launch
src/media_pipe_ros1/src/: Documentação  experiento.py  face_mesh_detector.py  hands_detector.py  holistic_detector.py  logica_controle.py  mediapipehands.py  pose_detector.py  teste.py  teste2.py  testero.py
src/media_pipe_ros1_msg/: CMakeLists.txt  package.xml
src/media_pipe_ros1_msg/msg/: MediaPipeHumanHolisticList.msg
