<?xml version="1.0"?>
<package format="2">
  <name>media_pipe_ros1_msg</name>
  <version>0.0.0</version>
  <description>The media_pipe_ros1_msg package</description>

  <maintainer email="dmartinelli1997@gmail.com">dieisson</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
